# texas-holdem-pocker

./: .env  docker-compose.yml  readme.md  structure.txt
backend/: Dockerfile.backend  README.md  pyproject.toml
backend/app/: db.py  main.py  models_entity.py  poker_service.py  repository.py  schemas.py  test_main.py
backend/sql/: init.sql
frontend/: Dockerfile.frontend
frontend/poker-app/: README.md  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
frontend/poker-app/src/app/: globals.css  layout.tsx  page.tsx
frontend/poker-app/src/app/api/hands/: route.ts
frontend/poker-app/src/components/poker/: action-log.tsx  board.tsx  card.tsx  controls.tsx  hand-history.tsx  player.tsx  poker-table.tsx  setup-controls.tsx
frontend/poker-app/src/lib/poker/: deck.ts  game-logic.test.ts  game-logic.ts  hand-evaluator.ts  types.ts  utils.ts
